--- a/wisim/src/java/net/sourceforge/wisim/controller/JPanelNewSupplier.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/JPanelNewSupplier.form
@@ -114,7 +114,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantPreis">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(10)" type="code"/>
+          <Connection code="new Validator(10)" type="code"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
       </Properties>
@@ -176,7 +176,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantMindestAbnahme">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(10)" type="code"/>
+          <Connection code="new Validator(10)" type="code"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
       </Properties>
@@ -192,7 +192,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantFirma">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(50)" type="code"/>
+          <Connection code="new Validator(50)" type="code"/>
         </Property>
       </Properties>
       <Constraints>
@@ -265,7 +265,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantName">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(50)" type="code"/>
+          <Connection code="new Validator(50)" type="code"/>
         </Property>
       </Properties>
       <Constraints>
@@ -294,7 +294,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantVorname">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(50)" type="code"/>
+          <Connection code="new Validator(50)" type="code"/>
         </Property>
       </Properties>
       <Constraints>
@@ -320,7 +320,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantStrasse">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(50)" type="code"/>
+          <Connection code="new Validator(50)" type="code"/>
         </Property>
       </Properties>
       <Constraints>
@@ -346,7 +346,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantOrt">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(50)" type="code"/>
+          <Connection code="new Validator(50)" type="code"/>
         </Property>
       </Properties>
       <Constraints>
@@ -373,7 +373,7 @@
       <Properties>
         <Property name="columns" type="int" value="5"/>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(5)" type="code"/>
+          <Connection code="new Validator(5)" type="code"/>
         </Property>
       </Properties>
       <Events>
@@ -405,7 +405,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantEMail">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(50)" type="code"/>
+          <Connection code="new Validator(50)" type="code"/>
         </Property>
       </Properties>
       <Events>
@@ -454,7 +454,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantTelefon">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(30)" type="code"/>
+          <Connection code="new Validator(30)" type="code"/>
         </Property>
       </Properties>
       <Constraints>
@@ -466,7 +466,7 @@
     <Component class="javax.swing.JTextField" name="jTextFieldNeuerLieferantFax">
       <Properties>
         <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new JTextFieldValidation(30)" type="code"/>
+          <Connection code="new Validator(30)" type="code"/>
         </Property>
       </Properties>
       <Constraints>
