--- a/wisim/src/java/net/sourceforge/wisim/controller/JPanelNewContract.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/JPanelNewContract.form
@@ -251,7 +251,7 @@
         <Component class="javax.swing.JTextField" name="jTextFieldNeuerVertragAbnahmemenge">
           <Properties>
             <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new JTextFieldValidation(10)" type="code"/>
+              <Connection code="new Validator(10)" type="code"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
           </Properties>
@@ -383,7 +383,7 @@
         <Component class="javax.swing.JTextField" name="jTextFieldNeuerVertragTag">
           <Properties>
             <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new JTextFieldValidation(2)" type="code"/>
+              <Connection code="new Validator(2)" type="code"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
@@ -399,7 +399,7 @@
         <Component class="javax.swing.JTextField" name="jTextFieldNeuerVertragMonat">
           <Properties>
             <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new JTextFieldValidation(2)" type="code"/>
+              <Connection code="new Validator(2)" type="code"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
@@ -415,7 +415,7 @@
         <Component class="javax.swing.JTextField" name="jTextFieldNeuerVertragJahr">
           <Properties>
             <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new JTextFieldValidation(4)" type="code"/>
+              <Connection code="new Validator(4)" type="code"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
@@ -445,7 +445,7 @@
         <Component class="javax.swing.JTextField" name="jTextFieldRabatt">
           <Properties>
             <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new JTextFieldValidation(5)" type="code"/>
+              <Connection code="new Validator(5)" type="code"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
           </Properties>
@@ -474,7 +474,7 @@
         <Component class="javax.swing.JTextField" name="jTextFieldSkonto">
           <Properties>
             <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new JTextFieldValidation(5)" type="code"/>
+              <Connection code="new Validator(5)" type="code"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
           </Properties>
@@ -528,6 +528,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldSkontofristTage">
           <Properties>
+            <Property name="document" type="javax.swing.text.Document" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new Validator(5)" type="code"/>
+            </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
           </Properties>
           <Events>
