--- a/wisim/src/java/net/sourceforge/wisim/controller/JPanelSimulationAnalysis.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/JPanelSimulationAnalysis.form
@@ -23,11 +23,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Simulation"/>
+        <Property name="text" type="java.lang.String" value="Auswertung"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="350" y="10" width="130" height="30"/>
+          <AbsoluteConstraints x="340" y="10" width="140" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
