Status-Ampel implementiert

--- a/wisim/src/java/net/sourceforge/wisim/controller/WiSimMainController.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/WiSimMainController.form
@@ -424,9 +424,17 @@
               </Properties>
             </Component>
             <Container class="javax.swing.JPanel" name="jPanelStatus">
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanelStatusMouseClicked"/>
+              </Events>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
               <SubComponents>
+                <Component class="javax.swing.JLabel" name="jLabelStatus">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Status:  "/>
+                  </Properties>
+                </Component>
                 <Component class="javax.swing.JLabel" name="jLabelGreen">
                   <Properties>
                     <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
@@ -438,6 +446,11 @@
                       </Border>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelGreenMouseClicked"/>
+                    <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelGreenMouseEntered"/>
+                    <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelGreenMouseExited"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabelYellow">
                   <Properties>
@@ -450,6 +463,11 @@
                       </Border>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelYellowMouseClicked"/>
+                    <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelYellowMouseEntered"/>
+                    <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelYellowMouseExited"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabelRed">
                   <Properties>
@@ -462,6 +480,11 @@
                       </Border>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelRedMouseClicked"/>
+                    <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelRedMouseEntered"/>
+                    <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelRedMouseExited"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
