--- a/wisim/src/java/net/sourceforge/wisim/controller/WiSimMainController.form
+++ b/wisim/src/java/net/sourceforge/wisim/controller/WiSimMainController.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.0" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.2" maxVersion="1.2" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="jMenuBarWiSim">
       <Properties>
@@ -85,7 +85,7 @@
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemKundenuebersicht">
                   <Properties>
                     <Property name="mnemonic" type="int" value="117"/>
-                    <Property name="text" type="java.lang.String" value="Kundenuebersicht"/>
+                    <Property name="text" type="java.lang.String" value="Kunden&#xfc;bersicht"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemKundenuebersichtActionPerformed"/>
@@ -130,7 +130,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemLagerUebersicht">
               <Properties>
                 <Property name="mnemonic" type="int" value="76"/>
-                <Property name="text" type="java.lang.String" value="Lagerübersicht"/>
+                <Property name="text" type="java.lang.String" value="Lager&#xfc;bersicht"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemLagerUebersichtActionPerformed"/>
@@ -179,7 +179,7 @@
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItemEtatEinsehen">
                   <Properties>
                     <Property name="mnemonic" type="int" value="65"/>
-                    <Property name="text" type="java.lang.String" value="Aufträge einsehen"/>
+                    <Property name="text" type="java.lang.String" value="Auftr&#xe4;ge einsehen"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemEtatEinsehenActionPerformed"/>
@@ -284,7 +284,14 @@
     <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="exitForm"/>
   </Events>
   <AuxValues>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,88,0,0,3,105"/>
+    <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_generateFQN" type="java.lang.Boolean" value="true"/>
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_i18nAutoMode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -339,7 +346,7 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="jButtonSimStart">
               <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/icons/run.gif"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Start"/>
@@ -359,7 +366,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="jButtonSimStop">
               <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/icons/stop.gif"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Stop"/>
@@ -379,7 +386,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="jButtonSimReset">
               <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/icons/reset.gif"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Reset"/>
@@ -437,7 +444,7 @@
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabelGreen">
                   <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/icons/ampel_aus.gif"/>
                     </Property>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -454,7 +461,7 @@
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabelYellow">
                   <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/icons/ampel_aus.gif"/>
                     </Property>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -471,7 +478,7 @@
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabelRed">
                   <Properties>
-                    <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/icons/ampel_aus.gif"/>
                     </Property>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
